samples/_failures_safe/1761318053_68a9c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_647c90ee.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_647c90ee.c:188:5: error: expected expression at end of input
  188 |     printf("Dijkstra distances from vertex %d:\n",
      |     ^~~~~~
./samples/SAFE/__tmp_647c90ee.c:188:5: error: expected declaration or statement at end of input
